enhancement: fix responsive spacing in section 3

--- a/output.css
+++ b/output.css
@@ -4367,6 +4367,10 @@ h3 {
     max-width: 420px;
   }
 
+  .max-md\:items-center {
+    align-items: center;
+  }
+
   .max-md\:gap-6 {
     gap: 1.5rem;
   }
@@ -4664,6 +4668,18 @@ h3 {
 
   .md\:pt-\[7rem\] {
     padding-top: 7rem;
+  }
+
+  .md\:pb-32 {
+    padding-bottom: 8rem;
+  }
+
+  .md\:pt-14 {
+    padding-top: 3.5rem;
+  }
+
+  .md\:pb-\[7\.8rem\] {
+    padding-bottom: 7.8rem;
   }
 
   .md\:text-left {
